--- a/README
+++ b/README
@@ -1,3 +1,2 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:7e5229664b16fb19777ffbb8e6eeecd327c3d4759cae36fbd102970e2dd85607
-size 94
+English model from https://github.com/daanzu/kaldi-active-grammar repackaged with generic LM
+
